--- a/html/sales.html
+++ b/html/sales.html
@@ -7,6 +7,8 @@
   <title>Salmon Cookie Shops</title>
 </head>
 <body>
-  
+  <h1>Salmon Cookie Shops</h1>
+
+  <script src="/js/app.js"></script>
 </body>
 </html>
