--- a/html/sales.html
+++ b/html/sales.html
@@ -7,8 +7,12 @@
   <title>Salmon Cookie Shops</title>
 </head>
 <body>
+
   <h1>Salmon Cookie Shops</h1>
 
+  <section id="salmon-shops">
+    
+  </section>
   <script src="/js/app.js"></script>
 </body>
 </html>
