--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>Salmon Cookies</title>
 </head>
 <body>
-  
-
 
   <a href="html/sales.html">Sales</a>
+  <a href="/styleguide.html">Styleguide</a>
 </body>
 </html>
