added font families:

--- a/styleguide.html
+++ b/styleguide.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
   <title>Style Guide</title>
 </head>
 
@@ -27,6 +28,12 @@
   <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #96654A; text-align: center; color: white;">
     <h3 style="padding-top: 12px;">#96654A</h3>
   </div>
+
+  <h1>Font Families</h1>
+  <h2 style="font-family: 'Cormorant', serif;">Headings: Cormorant, serif</h2>
+  <h4 style="font-family: 'Open+Sans', sans-serif;">Data values: Open+Sans, sans-serif</h4>
+  <p style="font-family: 'Lora:400i', serif;">Body Text: Lora:400i, serif</p>
+  <p style="font-family: 'Lora:400i', serif;"><em>Highlighted or emphasized text, Lora:400i, serif</em></p>
 </body>
 
 </html>
