styled homepage header, added css and img assets

--- a/styleguide.html
+++ b/styleguide.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <h1>Style Guide</h1>
+  <h1 style="font-family: 'Cormorant', serif;">Style Guide</h1>
 
-  <h2 style="margin: 0 auto; text-align: center;">Color Palette</h2>
+  <h2 style="margin: 0 auto; text-align: center; font-family: 'Cormorant', serif;">Color Palette</h2>
   <div style="height: 50px; width: 33%; margin: 5px auto; padding: auto 0px; background-color: #333024; text-align: center; color: white;">
     <h3 style="padding-top: 12px;">#333024</h3>
   </div>
@@ -29,7 +29,7 @@
     <h3 style="padding-top: 12px;">#96654A</h3>
   </div>
 
-  <h1>Font Families</h1>
+  <h1 style="font-family: 'Cormorant', serif;">Font Families</h1>
   <h2 style="font-family: 'Cormorant', serif;">Headings: Cormorant, serif</h2>
   <h4 style="font-family: 'Open+Sans', sans-serif;">Data values: Open+Sans, sans-serif</h4>
   <p style="font-family: 'Lora:400i', serif;">Body Text: Lora:400i, serif</p>
