--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="/css/main.css" type="text/css">
   <title>Salmon Cookies</title>
 </head>
+
 <body>
 
-  <a href="html/sales.html">Sales</a>
-  <a href="/styleguide.html">Styleguide</a>
+  <header>
+    <h1 id="header-h1">Pat's Salmon Cookies</h1>
+    <div id="header-image-container">
+      <img src="/img/salmon.png" />
+    </div>
+  </header>
+
+  <nav>
+    <ul>
+      <a href="html/sales.html"><li>Sales</li></a>
+      <a href="/styleguide.html"><li>Styleguide</li></a>      
+      <li>About</li>
+    </ul>
+  </nav>
+
 </body>
+
 </html>
