autoformatted all files

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 
   <nav>
     <ul>
-      <a href="html/sales.html"><li>Sales</li></a>
-      <a href="/styleguide.html"><li>Styleguide</li></a>      
+      <a href="html/sales.html">
+        <li>Sales</li>
+      </a>
+      <a href="/styleguide.html">
+        <li>Styleguide</li>
+      </a>
       <li>About</li>
     </ul>
   </nav>
