--- a/styleguide.html
+++ b/styleguide.html
@@ -33,7 +33,9 @@
   <h2 style="font-family: 'Cormorant', serif;">Headings: Cormorant, serif</h2>
   <h4 style="font-family: 'Open+Sans', sans-serif;">Data values: Open+Sans, sans-serif</h4>
   <p style="font-family: 'Lora:400i', serif;">Body Text: Lora:400i, serif</p>
-  <p style="font-family: 'Lora:400i', serif;"><em>Highlighted or emphasized text, Lora:400i, serif</em></p>
+  <p style="font-family: 'Lora:400i', serif;">
+    <em>Highlighted or emphasized text, Lora:400i, serif</em>
+  </p>
 </body>
 
 </html>
