--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/reset.css" type="text/css">
+
+  <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
+
   <link rel="stylesheet" href="/css/main.css" type="text/css">
   <title>Salmon Cookies</title>
 </head>
@@ -15,7 +18,7 @@
   <header>
     <h1 id="header-h1">Pat's Salmon Cookies</h1>
     <div id="header-image-container">
-      <img src="/img/salmon.png" />
+      <img src="/img/salmon.png" alt="salmon image for header background" />
     </div>
   </header>
 
