--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
     </ul>
   </nav>
 
+  <footer id="home-footer">
+    <section id="locations-hours-footer">
+      <h2>Locations</h2>
+      <p>
+        <em>All locations open from 6am to 8pm</em>
+      </p>
+      <ul id="locations-list-footer">
+        <li>
+          <h4>College and Pence</h4>
+        </li>
+        <li>
+          <h4>Chandler and 14th</h4>
+        </li>
+        <li>
+          <h4>Fresno and 14th</h4>
+        </li>
+        <li>
+          <h4>Minnesota and Bond</h4>
+        </li>
+        <li>
+          <h4>NE Neff and NE Williamson</h4>
+        </li>
+      </ul>
+    </section>
+
+  </footer>
 </body>
 
 </html>
