--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
     <h1>About Pat's Salmon Cookies</h1>
     <p>Seamoth sandperch triplefin blenny knifefish; zebrafish; North Pacific daggertooth Redhorse sucker titan triggerfish northern lampfish Blenny. Ropefish hussar blackchin righteye flounder Rattail loach minnow. Megamouth shark streamer fish pipefish kuhli loach river stingray. Pickerel New Zealand smelt tiger shark southern grayling, lamprey pompano gray reef shark. Sea bream demoiselle river shark man-of-war fish whitefish pearleye trout-perch weatherfish bramble shark.</p>
   </section>
+  
+  <section id="health-benefits-list">
+    <h2>Top Health Benefits</h2>
+    <ul>
+      <li>Benefits</li>
+      <li>Benefits</li>
+      <li>Benefits</li>
+      <li>Benefits</li>
+      <li>Benefits</li>
+      <li>Benefits</li>
+      <li>Benefits</li>
+    </ul>
+  </section>
   <footer id="home-footer">
     <section id="locations-hours-footer">
       <h2>Locations</h2>
@@ -61,6 +74,10 @@
           <h4>NE Neff and NE Williamson</h4>
         </li>
       </ul>
+    </section>
+
+    <section id="contact-footer">
+      
     </section>
 
   </footer>
