--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
 
   <section id="about-salmon-cookies">
     <h1>About Pat's Salmon Cookies</h1>
-    <p>Seamoth sandperch triplefin blenny knifefish; zebrafish; North Pacific daggertooth Redhorse sucker titan triggerfish northern lampfish Blenny. Ropefish hussar blackchin righteye flounder Rattail loach minnow. Megamouth shark streamer fish pipefish kuhli loach river stingray. Pickerel New Zealand smelt tiger shark southern grayling, lamprey pompano gray reef shark. Sea bream demoiselle river shark man-of-war fish whitefish pearleye trout-perch weatherfish bramble shark.</p>
+    <p>Seamoth sandperch triplefin blenny knifefish; zebrafish; North Pacific daggertooth Redhorse sucker titan triggerfish
+      northern lampfish Blenny. Ropefish hussar blackchin righteye flounder Rattail loach minnow. Megamouth shark streamer
+      fish pipefish kuhli loach river stingray. Pickerel New Zealand smelt tiger shark southern grayling, lamprey pompano
+      gray reef shark. Sea bream demoiselle river shark man-of-war fish whitefish pearleye trout-perch weatherfish bramble
+      shark.</p>
   </section>
-  
+
   <section id="health-benefits-list">
     <h2>Top Health Benefits</h2>
     <ul>
@@ -77,7 +81,9 @@
     </section>
 
     <section id="contact-footer">
-      
+      <h2>Contact Us</h2>
+      <h3>Central Oregon Community College</h3>
+      <p>2600 N.W. College Way</br>Bend, Oregon 97703</br>541-383-7700</p>
     </section>
 
   </footer>
