--- a/html/sales.html
+++ b/html/sales.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="../css/reset.css" type="text/css">
 
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/main.css" type="text/css">
+  <link rel="stylesheet" href="../css/main.css" type="text/css">
   <title>Salmon Cookie Shops</title>
 </head>
 
@@ -18,16 +18,16 @@
   <header>
     <h1 id="header-h1">Pat's Salmon Cookies</h1>
     <div id="header-image-container">
-      <img src="/img/salmon.png" alt="salmon image for header background" />
+      <img src="../img/salmon.png" alt="salmon image for header background" />
     </div>
   </header>
 
   <nav>
     <ul>
-      <a href="html/sales.html">
+      <a href="./html/sales.html">
         <li>Sales</li>
       </a>
-      <a href="/styleguide.html">
+      <a href="../styleguide.html">
         <li>Styleguide</li>
       </a>
       <li>About</li>
@@ -66,7 +66,7 @@
 
   </footer>
 
-  <script src="/js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
