switched id to table instead of a section

--- a/html/sales.html
+++ b/html/sales.html
@@ -35,8 +35,10 @@
   </nav>
   <h1>Salmon Cookie Shops</h1>
 
-  <section id="salmon-shops">
+  <section>
+    <table id="salmon-shops">
 
+    </table>
   </section>
 
   <footer id="home-footer">
