Fixed link references to site pages

--- a/html/sales.html
+++ b/html/sales.html
@@ -20,19 +20,22 @@
     <div id="header-image-container">
       <img src="../img/salmon.png" alt="salmon image for header background" />
     </div>
+    <nav>
+      <ul>
+        <a href="../index.html">
+          <li>Home</li>
+        </a>
+        <a href="./html/sales.html">
+          <li>Sales</li>
+        </a>
+        <a href="../styleguide.html">
+          <li>Styleguide</li>
+        </a>
+      </ul>
+    </nav>
   </header>
 
-  <nav>
-    <ul>
-      <a href="./html/sales.html">
-        <li>Sales</li>
-      </a>
-      <a href="../styleguide.html">
-        <li>Styleguide</li>
-      </a>
-      <li>About</li>
-    </ul>
-  </nav>
+
   <h1>Salmon Cookie Shops</h1>
 
   <section>
@@ -64,6 +67,12 @@
           <h4>NE Neff and NE Williamson</h4>
         </li>
       </ul>
+    </section>
+
+    <section id="contact-footer">
+      <h2>Contact Us</h2>
+      <h3>Central Oregon Community College</h3>
+      <p>2600 N.W. College Way</br>Bend, Oregon 97703</br>541-383-7700</p>
     </section>
 
   </footer>
