--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
     <div id="header-image-container">
       <img src="./img/salmon.png" alt="salmon image for header background" />
     </div>
+    <nav>
+      <ul>
+        <a href="./index.html">
+          <li>Home</li>
+        </a>
+        <a href="./html/sales.html">
+          <li>Sales</li>
+        </a>
+        <a href="../styleguide.html">
+          <li>Styleguide</li>
+        </a>
+      </ul>
+    </nav>
   </header>
 
-  <nav>
-    <ul>
-      <a href="./html/sales.html">
-        <li>Sales</li>
-      </a>
-      <a href="./styleguide.html">
-        <li>Styleguide</li>
-      </a>
-      <li>About</li>
-    </ul>
-  </nav>
 
   <section id="about-salmon-cookies">
     <h1>About Pat's Salmon Cookies</h1>
@@ -38,7 +40,8 @@
       northern lampfish Blenny. Ropefish hussar blackchin righteye flounder Rattail loach minnow. Megamouth shark streamer
       fish pipefish kuhli loach river stingray. Pickerel New Zealand smelt tiger shark southern grayling, lamprey pompano
       gray reef shark. Sea bream demoiselle river shark man-of-war fish whitefish pearleye trout-perch weatherfish bramble
-      shark.</p>
+      shark.
+    </p>
   </section>
 
   <section id="health-benefits-list">
