--- a/styleguide.html
+++ b/styleguide.html
@@ -18,19 +18,20 @@
     <div id="header-image-container">
       <img src="/img/salmon.png" alt="salmon image for header background" />
     </div>
+    <nav>
+      <ul>
+        <a href="../index.html">
+          <li>Home</li>
+        </a>
+        <a href="./html/sales.html">
+          <li>Sales</li>
+        </a>
+        <a href="../styleguide.html">
+          <li>Styleguide</li>
+        </a>
+      </ul>
+    </nav>
   </header>
-
-  <nav>
-    <ul>
-      <a href="html/sales.html">
-        <li>Sales</li>
-      </a>
-      <a href="/styleguide.html">
-        <li>Styleguide</li>
-      </a>
-      <li>About</li>
-    </ul>
-  </nav>
 
   <h1 style="font-family: 'Cormorant', serif;">Style Guide</h1>
 
