Updated styles, added table styles

--- a/styleguide.html
+++ b/styleguide.html
@@ -33,9 +33,9 @@
     </nav>
   </header>
 
-  <h1 style="font-family: 'Cormorant', serif;">Style Guide</h1>
+  <h1>Style Guide</h1>
 
-  <h2 style="margin: 0 auto; text-align: center; font-family: 'Cormorant', serif;">Color Palette</h2>
+  <h2 style="margin: 0 auto; text-align: center;">Color Palette</h2>
   <div style="height: 50px; width: 33%; margin: 5px auto; padding: auto 0px; background-color: #333024; text-align: center; color: white;">
     <h3 style="padding-top: 12px;">#333024</h3>
   </div>
@@ -52,13 +52,73 @@
     <h3 style="padding-top: 12px;">#96654A</h3>
   </div>
 
-  <h1 style="font-family: 'Cormorant', serif;">Font Families</h1>
-  <h2 style="font-family: 'Cormorant', serif;">Headings: Cormorant, serif</h2>
-  <h4 style="font-family: 'Open+Sans', sans-serif;">Data values: Open+Sans, sans-serif</h4>
-  <p style="font-family: 'Lora:400i', serif;">Body Text: Lora:400i, serif</p>
-  <p style="font-family: 'Lora:400i', serif;">
-    <em>Highlighted or emphasized text, Lora:400i, serif</em>
-  </p>
+  <aside id="typography-aside">
+    <h1>Font Families</h1>
+    <h2>Headings: Cormorant, serif</h2>
+    <h4>Data values: Open+Sans, sans-serif</h4>
+    <p>Body Text: Lora:400i, serif</p>
+    <p>
+      <em>Highlighted or emphasized text, Lora:400i, serif</em>
+    </p>
+  </aside>
+
+  <table id="table-style-guide">
+    <tr>
+      <th>THead 1</th>
+      <th>THead 2</th>
+      <th>THead 3</th>
+      <th>THead 4</th>
+      <th>THead 5</th>
+      <th>THead 6</th>
+      <th>THead 7</th>
+    </tr>
+    <tr>
+      <th>Body Header</th>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+    </tr>
+    <tr>
+      <th>Body Header</th>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+    </tr>
+    <tr>
+      <th>Body Header</th>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+    </tr>
+    <tr>
+      <th>Body Header</th>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+    </tr>
+    <tr>
+      <th>Body Header</th>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+      <td>Data Cell</td>
+    </tr>
+    </tbody>
+  </table>
 
   <footer id="home-footer">
     <section id="locations-hours-footer">
@@ -83,6 +143,11 @@
           <h4>NE Neff and NE Williamson</h4>
         </li>
       </ul>
+    </section>
+    <section id="contact-footer">
+      <h2>Contact Us</h2>
+      <h3>Central Oregon Community College</h3>
+      <p>2600 N.W. College Way</br>Bend, Oregon 97703</br>541-383-7700</p>
     </section>
 
   </footer>
