--- a/html/sales.html
+++ b/html/sales.html
@@ -22,7 +22,7 @@
     </div>
     <nav>
       <ul>
-        <a href="../index.html">
+        <a href="./index.html">
           <li>Home</li>
         </a>
         <a href="./html/sales.html">
