--- a/html/sales.html
+++ b/html/sales.html
@@ -22,10 +22,10 @@
     </div>
     <nav>
       <ul>
-        <a href="./index.html">
+        <a href="../index.html">
           <li>Home</li>
         </a>
-        <a href="./html/sales.html">
+        <a href="/sales.html">
           <li>Sales</li>
         </a>
         <a href="../styleguide.html">
