--- a/styleguide.html
+++ b/styleguide.html
@@ -20,13 +20,13 @@
     </div>
     <nav>
       <ul>
-        <a href="../index.html">
+        <a href="./index.html">
           <li>Home</li>
         </a>
         <a href="./html/sales.html">
           <li>Sales</li>
         </a>
-        <a href="../styleguide.html">
+        <a href="./styleguide.html">
           <li>Styleguide</li>
         </a>
       </ul>
@@ -35,6 +35,7 @@
 
   <h1>Style Guide</h1>
 
+  <!-- Box this -->
   <h2 style="margin: 0 auto; text-align: center;">Color Palette</h2>
   <div style="height: 50px; width: 33%; margin: 5px auto; padding: auto 0px; background-color: #333024; text-align: center; color: white;">
     <h3 style="padding-top: 12px;">#333024</h3>
