Added basic form with some styling

--- a/html/sales.html
+++ b/html/sales.html
@@ -38,6 +38,25 @@
 
   <h1>Salmon Cookie Shops</h1>
 
+  <form id="new-shop-form">
+    <fieldset>
+      <legend>Add a new shop!</legend>
+
+      <label for="location">Location</label>
+      <input name="location" type="text" size="30"/>
+
+      <label for="min-customers">Minimum Customers</label>
+      <input name="min-customers" type="number" size="5" />
+
+      <label for="max-customers">Maximum Customers</label>
+      <input name="max-customers" type="number" size="5" />
+
+      <label for="avg-cookies-per-customer">Average cookies per customer</label>
+      <input name="avg-cookies-per-customer" type="number" size="5" />
+
+    </fieldset>
+  </form>
+
   <section>
     <table id="salmon-shops">
 
