--- a/html/sales.html
+++ b/html/sales.html
@@ -43,16 +43,18 @@
       <legend>Add a new shop!</legend>
 
       <label for="location">Location</label>
-      <input name="location" type="text" size="30"/>
+      <input name="location" type="text" size="30" required=true />
 
       <label for="min-customers">Minimum Customers</label>
-      <input name="min-customers" type="number" size="5" />
+      <input name="min-customers" type="number" size="5" required=true />
 
       <label for="max-customers">Maximum Customers</label>
-      <input name="max-customers" type="number" size="5" />
+      <input name="max-customers" type="number" size="5" required=true />
 
       <label for="avg-cookies-per-customer">Average cookies per customer</label>
-      <input name="avg-cookies-per-customer" type="number" size="5" />
+      <input name="avg-cookies-per-customer" type="number" size="5" required=true />
+
+      <button type="submit">Add Shop</button>
 
     </fieldset>
   </form>
