Handler and listener is now grabbing the value from all input fields

--- a/html/sales.html
+++ b/html/sales.html
@@ -45,14 +45,14 @@
       <label for="location">Location</label>
       <input name="location" type="text" size="30" required=true />
 
-      <label for="min-customers">Minimum Customers</label>
-      <input name="min-customers" type="number" size="5" required=true />
+      <label for="minCustomers">Minimum Customers</label>
+      <input name="minCustomers" type="number" size="5" required=true />
 
-      <label for="max-customers">Maximum Customers</label>
-      <input name="max-customers" type="number" size="5" required=true />
+      <label for="maxCustomers">Maximum Customers</label>
+      <input name="maxCustomers" type="number" size="5" required=true />
 
-      <label for="avg-cookies-per-customer">Average cookies per customer</label>
-      <input name="avg-cookies-per-customer" type="number" size="5" required=true />
+      <label for="avgCookiesPerCustomer">Average cookies per customer</label>
+      <input name="avgCookiesPerCustomer" type="number" size="5" required=true />
 
       <button type="submit">Add Shop</button>
 
