new shop is rendering onto screen, just in the wrong spot

--- a/html/sales.html
+++ b/html/sales.html
@@ -52,7 +52,7 @@
       <input name="maxCustomers" type="number" size="5" required=true />
 
       <label for="avgCookiesPerCustomer">Average cookies per customer</label>
-      <input name="avgCookiesPerCustomer" type="number" size="5" required=true />
+      <input name="avgCookiesPerCustomer" type="number" step="any" size="5" required=true />
 
       <button type="submit">Add Shop</button>
 
