added more styling to form and table

--- a/html/sales.html
+++ b/html/sales.html
@@ -37,7 +37,7 @@
 
   <div id="page-container">
 
-    <h1>Salmon Cookie Shops</h1>
+    <h1 id="sales-page-header">Salmon Cookie Shops</h1>
 
     <section id="sales-form-section">
       <form id="new-shop-form">
@@ -56,7 +56,7 @@
           <label for="avgCookiesPerCustomer">Average cookies per customer</label>
           <input name="avgCookiesPerCustomer" type="number" step="any" size="5" required=true />
 
-          <button type="submit">Add Shop</button>
+          <button id="addNewShopBtn"type="submit">Add Shop</button>
 
         </fieldset>
       </form>
