--- a/html/sales.html
+++ b/html/sales.html
@@ -25,7 +25,7 @@
         <a href="../index.html">
           <li>Home</li>
         </a>
-        <a href="/sales.html">
+        <a href="sales.html">
           <li>Sales</li>
         </a>
         <a href="../styleguide.html">
