added scalfolding for header and nav

--- a/index.html
+++ b/index.html
@@ -12,82 +12,29 @@
 </head>
 
 <body>
-
   <header>
-    <h1 id="header-h1">Pat's Salmon Cookies</h1>
-    <div id="header-image-container">
-      <img src="./img/salmon.png" alt="salmon image for header background" />
-    </div>
+    <img src="http://placeholder.it/787x246/000" alt="">
+    <h1>Site Header Title</h1>
+
     <nav>
       <ul>
-        <a href="./index.html">
-          <li>Home</li>
-        </a>
-        <a href="./html/sales.html">
-          <li>Sales</li>
-        </a>
-        <a href="../styleguide.html">
-          <li>Styleguide</li>
-        </a>
+        <li>
+          <a href="#">Nav 1</a>
+        </li>
+        <li>
+          <a href="#">Nav 2</a>
+        </li>
+        <li>
+          <a href="#">Nav 3</a>
+        </li>
+        <li>
+          <a href="#">Nav 4</a>
+        </li>
       </ul>
+
     </nav>
+    
   </header>
-
-
-  <section id="about-salmon-cookies">
-    <h1>About Pat's Salmon Cookies</h1>
-    <p>Seamoth sandperch triplefin blenny knifefish; zebrafish; North Pacific daggertooth Redhorse sucker titan triggerfish
-      northern lampfish Blenny. Ropefish hussar blackchin righteye flounder Rattail loach minnow. Megamouth shark streamer
-      fish pipefish kuhli loach river stingray. Pickerel New Zealand smelt tiger shark southern grayling, lamprey pompano
-      gray reef shark. Sea bream demoiselle river shark man-of-war fish whitefish pearleye trout-perch weatherfish bramble
-      shark.
-    </p>
-  </section>
-
-  <section id="health-benefits-list">
-    <h2>Top Health Benefits</h2>
-    <ul>
-      <li>Benefits</li>
-      <li>Benefits</li>
-      <li>Benefits</li>
-      <li>Benefits</li>
-      <li>Benefits</li>
-      <li>Benefits</li>
-      <li>Benefits</li>
-    </ul>
-  </section>
-  <footer id="home-footer">
-    <section id="locations-hours-footer">
-      <h2>Locations</h2>
-      <p>
-        <em>All locations open from 6am to 8pm</em>
-      </p>
-      <ul id="locations-list-footer">
-        <li>
-          <h4>College and Pence</h4>
-        </li>
-        <li>
-          <h4>Chandler and 14th</h4>
-        </li>
-        <li>
-          <h4>Fresno and 14th</h4>
-        </li>
-        <li>
-          <h4>Minnesota and Bond</h4>
-        </li>
-        <li>
-          <h4>NE Neff and NE Williamson</h4>
-        </li>
-      </ul>
-    </section>
-
-    <section id="contact-footer">
-      <h2>Contact Us</h2>
-      <h3>Central Oregon Community College</h3>
-      <p>2600 N.W. College Way</br>Bend, Oregon 97703</br>541-383-7700</p>
-    </section>
-
-  </footer>
 </body>
 
 </html>
