--- a/index.html
+++ b/index.html
@@ -33,8 +33,20 @@
       </ul>
 
     </nav>
-    
+
   </header>
+
+  <main>
+
+    <section>
+      <h1>Heading 1</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Quisque sagittis purus sit amet volutpat. Rutrum tellus pellentesque eu tincidunt. Ornare arcu dui vivamus
+        arcu felis bibendum ut tristique. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Eget mauris pharetra
+        et ultrices.</p>
+    </section>
+
+  </main>
 </body>
 
 </html>
