--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
         et ultrices.</p>
     </section>
 
+    <section>
+      <article>
+        <h2>Heading 2</h2>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+          <li>Item 4</li>
+          <li>Item 5</li>
+          <li>Item 6</li>
+          <li>Item 7</li>
+          <li>Item 8</li>
+          <li>Item 9</li>
+          <li>Item 10</li>
+        </ul>
+
+        <img src="http://placeholder.it/300x300/000" alt="">
+      </article>
+    </section>
+
   </main>
 </body>
 
