added html structure for the about the family section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
       </article>
     </section>
 
+    <section>
+      <img src="http://placeholder.it/852x480/000" alt="">
+      <h1>Heading 1</h1>
+    </section>
+
   </main>
 </body>
 
