finished html structure setup

--- a/index.html
+++ b/index.html
@@ -70,8 +70,26 @@
       <img src="http://placeholder.it/852x480/000" alt="">
       <h1>Heading 1</h1>
     </section>
-
   </main>
+
+  <footer>
+    <section>
+      <h3>Heading 3</h3>
+      <p>Body Text Emphasized</p>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+      </ul>
+    </section>
+    
+    <section>
+      <h3>Heading 3</h3>
+      <address></address>
+    </section>
+  </footer>
 </body>
 
 </html>
