--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css" type="text/css">
-  <link rel="stylesheet" href="./css/main.css" type="text/css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
   <title>Salmon Cookies</title>
 </head>
 
 <body>
   <header>
-    <img src="http://placeholder.it/787x246/000" alt="">
+    <img src="http://placehold.it/787x246/000" alt="">
     <h1>Site Header Title</h1>
 
     <nav>
@@ -62,12 +62,12 @@
           <li>Item 10</li>
         </ul>
 
-        <img src="http://placeholder.it/300x300/000" alt="">
+        <img src="http://placehold.it/300x300/000" alt="">
       </article>
     </section>
 
     <section>
-      <img src="http://placeholder.it/852x480/000" alt="">
+      <img src="http://placehold.it/960x400/000" alt="">
       <h1>Heading 1</h1>
     </section>
   </main>
