styled header image and title

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
 <body>
   <header>
-    <img src="http://placehold.it/787x246/000" alt="">
-    <h1>Site Header Title</h1>
+    <img src="./img/salmon.png" alt="Salmon header image">
+    <h1>PAT'S<br/>SALMON COOKIES</h1>
 
     <nav>
       <ul>
         <li>
-          <a href="#">Nav 1</a>
+          <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">Nav 2</a>
+          <a href="./html/sales.html">Sales</a>
         </li>
         <li>
-          <a href="#">Nav 3</a>
+          <a href="./styleguide.html">Style Guide</a>
         </li>
         <li>
           <a href="#">Nav 4</a>
@@ -65,13 +65,14 @@
       </article>
 
       <img src="http://placehold.it/300x300/000" alt="">
-      
+
     </section>
 
     <section>
-      <img src="http://placehold.it/960x400/000" alt="">
       <h1>Heading 1</h1>
+      <img src="http://placehold.it/960x400/000" alt="">
     </section>
+
   </main>
 
   <footer>
@@ -86,7 +87,7 @@
         <li>Item 5</li>
       </ul>
     </section>
-    
+
     <section>
       <h3>Heading 3</h3>
       <address></address>
