--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <main>
 
     <section>
-      <h1>Heading 1</h1>
+      <h1>About The Cookies</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Quisque sagittis purus sit amet volutpat. Rutrum tellus pellentesque eu tincidunt. Ornare arcu dui vivamus
         arcu felis bibendum ut tristique. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Eget mauris pharetra
@@ -48,28 +48,28 @@
 
     <section>
       <article>
-        <h2>Heading 2</h2>
+        <h2>The Ingredients</h2>
         <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
-          <li>Item 6</li>
-          <li>Item 7</li>
-          <li>Item 8</li>
-          <li>Item 9</li>
-          <li>Item 10</li>
+          <li>1/3 cup butter</li>
+          <li>1/3 cup shortening</li>
+          <li>3/4 cup sugar</li>
+          <li>1 teaspoon baking powder</li>
+          <li>DASH of salt</li>
+          <li>1 egg</li>
+          <li>1 tablespoon milk</li>
+          <li>1 teaspoon vanilla</li>
+          <li>2 cups all-purpose flour</li>
+          <li>SALMON!!</li>
         </ul>
 
       </article>
 
-      <img src="http://placehold.it/300x300/000" alt="">
+      <img src="./img/cutter.jpeg" alt="">
 
     </section>
 
     <section>
-      <h1>Heading 1</h1>
+      <h1>Our Random Family</h1>
       <img src="http://placehold.it/960x400/000" alt="">
     </section>
 
