--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
       </article>
 
-      <img src="./img/cutter.jpeg" alt="">
+      <img src="./img/cutter.jpeg" alt="Salmon shaped cookie cutter">
 
     </section>
 
     <section>
       <h1>Our Random Family</h1>
-      <img src="http://placehold.it/960x400/000" alt="">
+      <img src="./img/family.jpg" alt="our family">
     </section>
 
   </main>
