Finished styling for the home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <header>
     <img src="./img/salmon.png" alt="Salmon header image">
-    <h1>PAT'S<br/>SALMON COOKIES</h1>
+    <h1>PAT'S
+      <br/>SALMON COOKIES</h1>
 
     <nav>
       <ul>
@@ -77,20 +78,35 @@
 
   <footer>
     <section>
-      <h3>Heading 3</h3>
-      <p>Body Text Emphasized</p>
+      <h3>Locations</h3>
+      <p><em>All locations open from 6am to 8pm</em></p>
       <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
+        <li>College and Pence</li>
+        <li>Chandler and 14th</li>
+        <li>Fresno and 14th</li>
+        <li>Minnesota and Bond</li>
+        <li>NE Neff and NE Willamette</li>
       </ul>
     </section>
 
     <section>
-      <h3>Heading 3</h3>
-      <address></address>
+      <h3>Contact Us</h3>
+      <address>
+        Pat's Salmon Cookies
+        <br/> 42 Wallaby Way
+        <br/> Sydney, Australia
+        <br/> 555-555-555
+      </address>
+    </section>
+
+    <section>
+      <fieldset>
+        <legend>Join Our Newsletter</legend>
+        <form action="">
+          <input type="email" />
+          <input type="submit" value="Add me!"/>
+        </form>
+      </fieldset>
     </section>
   </footer>
 </body>
