--- a/html/sales.html
+++ b/html/sales.html
@@ -5,104 +5,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/reset.css" type="text/css">
-
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
-
-  <link rel="stylesheet" href="../css/main.css" type="text/css">
-  <title>Salmon Cookie Shops</title>
+  <link rel="stylesheet" href="../css/reset.css" type="text/css">
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <title>Salmon Cookie Sales</title>
 </head>
 
 <body>
+  <img src="../img/salmon.png" alt="Salmon header image">
+  <h1>PAT'S
+    <br/>SALMON COOKIES</h1>
 
-  <header>
-    <h1 id="header-h1">Pat's Salmon Cookies</h1>
-    <div id="header-image-container">
-      <img src="../img/salmon.png" alt="salmon image for header background" />
-    </div>
-    <nav>
-      <ul>
-        <a href="../index.html">
-          <li>Home</li>
-        </a>
-        <a href="sales.html">
-          <li>Sales</li>
-        </a>
-        <a href="../styleguide.html">
-          <li>Styleguide</li>
-        </a>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li>
+        <a href="../index.html">Home</a>
+      </li>
+      <li>
+        <a href="#">Sales</a>
+      </li>
+      <li>
+        <a href="../styleguide.html">Style Guide</a>
+      </li>
+      <li>
+        <a href="#">Nav 4</a>
+      </li>
+    </ul>
+
+  </nav>
+
   </header>
 
-  <div id="page-container">
-
-    <h1 id="sales-page-header">Salmon Cookie Shops</h1>
+  <main>
+    <h1>Sales Projection</h1>
 
     <section id="sales-form-section">
       <form id="new-shop-form">
         <fieldset>
-          <legend>Add a new shop!</legend>
-
+          <legend>Add a new store</legend>
           <label for="location">Location</label>
-          <input name="location" type="text" size="30" required=true />
+          <input type="text" name="location" />
 
           <label for="minCustomers">Minimum Customers</label>
-          <input name="minCustomers" type="number" size="5" required=true />
+          <input type="number" name="minCustomers" />
 
           <label for="maxCustomers">Maximum Customers</label>
-          <input name="maxCustomers" type="number" size="5" required=true />
+          <input type="number" name="maxCustomers" />
 
-          <label for="avgCookiesPerCustomer">Average cookies per customer</label>
-          <input name="avgCookiesPerCustomer" type="number" step="any" size="5" required=true />
-
-          <button id="addNewShopBtn"type="submit">Add Shop</button>
-
+          <label for="avgCookiesPerCustomer">Avg Cookies Per Customer</label>
+          <input type="number" step="any" name="avgCookiesPerCustomer" />
         </fieldset>
       </form>
     </section>
-    <section>
-      <table id="salmon-shops">
 
-      </table>
-    </section>
-
-  </div>
-
-  <footer id="home-footer">
-    <section id="locations-hours-footer">
-      <h2>Locations</h2>
-      <p>
-        <em>All locations open from 6am to 8pm</em>
-      </p>
-      <ul id="locations-list-footer">
-        <li>
-          <h4>College and Pence</h4>
-        </li>
-        <li>
-          <h4>Chandler and 14th</h4>
-        </li>
-        <li>
-          <h4>Fresno and 14th</h4>
-        </li>
-        <li>
-          <h4>Minnesota and Bond</h4>
-        </li>
-        <li>
-          <h4>NE Neff and NE Williamson</h4>
-        </li>
-      </ul>
-    </section>
-
-    <section id="contact-footer">
-      <h2>Contact Us</h2>
-      <h3>Central Oregon Community College</h3>
-      <p>2600 N.W. College Way</br>Bend, Oregon 97703</br>541-383-7700</p>
-    </section>
-
-  </footer>
-
-  <script src="../js/app.js"></script>
+  </main>
 </body>
 
 </html>
