finished table styling and form styling

--- a/html/sales.html
+++ b/html/sales.html
@@ -55,10 +55,12 @@
           <div></div>
           <label for="avgCookiesPerCustomer">Avg Cookies Per Customer</label>
           <input type="number" step="any" name="avgCookiesPerCustomer" />
+
+          <input type="submit" value="Add Shop" />
         </fieldset>
       </form>
 
-    <section>
+    <section id="large-table-container">
       <table id="salmon-shops-table"></table>
     </section>
 
