finished styling. Added all pictures

--- a/styleguide.html
+++ b/styleguide.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/css/reset.css" type="text/css">
-  <link rel="stylesheet" href="/css/main.css" type="text/css">
+  <link rel="stylesheet" href="/css/style.css" type="text/css">
   <title>Style Guide</title>
 </head>
 
@@ -33,92 +33,109 @@
     </nav>
   </header>
 
-  <h1>Style Guide</h1>
+  <main style="text-align: center; margin-bottom: 10px;">
 
-  <h2 style="margin: 0 auto; text-align: center;">Color Palette</h2>
-  <div style="height: 50px; width: 33%; margin: 5px auto; padding: auto 0px; background-color: #333024; text-align: center; color: white;">
-    <h3 style="padding-top: 12px;">#333024</h3>
-  </div>
-  <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #CDBAAF; text-align: center; color: white;">
-    <h3 style="padding-top: 12px;">#CDBAAF</h3>
-  </div>
-  <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #ABA78F; text-align: center; color: white;">
-    <h3 style="padding-top: 12px;">#ABA78F</h3>
-  </div>
-  <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #C28C5E; text-align: center; color: white;">
-    <h3 style="padding-top: 12px;">#C28C5E</h3>
-  </div>
-  <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #96654A; text-align: center; color: white;">
-    <h3 style="padding-top: 12px;">#96654A</h3>
-  </div>
+    <h1>Style Guide</h1>
 
-  <aside id="typography-aside">
-    <h1>Font Families</h1>
-    <h2>Headings: Cormorant, serif</h2>
-    <h4>Data values: Open+Sans, sans-serif</h4>
-    <p>Body Text: Lora:400i, serif</p>
-    <p>
-      <em>Highlighted or emphasized text, Lora:400i, serif</em>
-    </p>
-  </aside>
+    <h2>Color Palette</h2>
+    <div style="height: 50px; width: 33%; margin: 5px auto; padding: auto 0px; background-color: #333024; text-align: center; color: white;">
+      <h3 style="padding-top: 12px;">#333024</h3>
+    </div>
+    <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #CDBAAF; text-align: center; color: white;">
+      <h3 style="padding-top: 12px;">#CDBAAF</h3>
+    </div>
+    <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #ABA78F; text-align: center; color: white;">
+      <h3 style="padding-top: 12px;">#ABA78F</h3>
+    </div>
+    <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #C28C5E; text-align: center; color: white;">
+      <h3 style="padding-top: 12px;">#C28C5E</h3>
+    </div>
+    <div style="height: 50px; width: 33%; margin: 5px auto; background-color: #96654A; text-align: center; color: white;">
+      <h3 style="padding-top: 12px;">#96654A</h3>
+    </div>
 
-  <table id="table-style-guide">
-    <tr>
-      <th>THead 1</th>
-      <th>THead 2</th>
-      <th>THead 3</th>
-      <th>THead 4</th>
-      <th>THead 5</th>
-      <th>THead 6</th>
-      <th>THead 7</th>
-    </tr>
-    <tr>
-      <th>Body Header</th>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-    </tr>
-    <tr>
-      <th>Body Header</th>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-    </tr>
-    <tr>
-      <th>Body Header</th>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-    </tr>
-    <tr>
-      <th>Body Header</th>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-    </tr>
-    <tr>
-      <th>Body Header</th>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-      <td>Data Cell</td>
-    </tr>
-    </tbody>
-  </table>
+    <section style="text-align: center">
+      <h1>Font Families</h1>
+      <h2>Headings: Cormorant, serif</h2>
+      <h4>Data values: Open+Sans, sans-serif</h4>
+      <p>Body Text: Lora:400i, serif</p>
+      <p>
+        <em>Highlighted or emphasized text, Lora:400i, serif</em>
+      </p>
+    </section>
+
+    <table id="table-style-guide">
+      <tr>
+        <th>THead 1</th>
+        <th>THead 2</th>
+        <th>THead 3</th>
+        <th>THead 4</th>
+        <th>THead 5</th>
+        <th>THead 6</th>
+        <th>THead 7</th>
+      </tr>
+      <tr>
+        <th>Body Header</th>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+      </tr>
+      <tr>
+        <th>Body Header</th>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+      </tr>
+      <tr>
+        <th>Body Header</th>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+      </tr>
+      <tr>
+        <th>Body Header</th>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+      </tr>
+      <tr>
+        <th>Body Header</th>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+        <td>Data Cell</td>
+      </tr>
+      </tbody>
+    </table>
+
+    <section style="">
+      <h2>Images to use</h2>
+      <img src="./img/salmon.png" alt="image of a salmon">
+      <img src="./img/cutter.jpeg" alt="salmon cookie cutter">
+      <img src="./img/family.jpg" alt="stock family photo">
+    </section>
+    <section>
+      <h2>Images to definitely NOT use</h2>
+      <img src="./img/fish.jpg" alt="lots of fish">
+      <img src="./img/frosted-cookie.jpg" alt="frosted fish cookie">
+      <img src="./img/shirt.jpg" alt="fish shirt">
+    </section>
+
+  </main>
 
   <footer id="home-footer">
     <section id="locations-hours-footer">
