--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css" type="text/css">
-  <link rel="stylesheet" href="./css/style.css" type="text/css">
+  <link rel="stylesheet" href="./css/main.css" type="text/css">
   <title>Salmon Cookies</title>
 </head>
 
