--- a/styleguide.html
+++ b/styleguide.html
@@ -7,30 +7,35 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Cormorant|Lora:400i|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/css/reset.css" type="text/css">
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <link rel="stylesheet" href="/css/main.css" type="text/css">
   <title>Style Guide</title>
 </head>
 
 <body>
 
   <header>
-    <h1 id="header-h1">Pat's Salmon Cookies</h1>
-    <div id="header-image-container">
-      <img src="/img/salmon.png" alt="salmon image for header background" />
-    </div>
+    <img src="./img/salmon.png" alt="Salmon header image">
+    <h1>PAT'S
+      <br/>SALMON COOKIES</h1>
+
     <nav>
       <ul>
-        <a href="./index.html">
-          <li>Home</li>
-        </a>
-        <a href="./html/sales.html">
-          <li>Sales</li>
-        </a>
-        <a href="./styleguide.html">
-          <li>Styleguide</li>
-        </a>
+        <li>
+          <a href="./index.html">Home</a>
+        </li>
+        <li>
+          <a href="./html/sales.html">Sales</a>
+        </li>
+        <li>
+          <a href="#">Style Guide</a>
+        </li>
+        <li>
+          <a href="#">Nav 4</a>
+        </li>
       </ul>
+
     </nav>
+
   </header>
 
   <main style="text-align: center; margin-bottom: 10px;">
@@ -122,7 +127,7 @@
       </tbody>
     </table>
 
-    <section style="">
+    <section>
       <h2>Images to use</h2>
       <img src="./img/salmon.png" alt="image of a salmon">
       <img src="./img/cutter.jpeg" alt="salmon cookie cutter">
