Changed name of last dummy link

--- a/styleguide.html
+++ b/styleguide.html
@@ -30,7 +30,7 @@
           <a href="#">Style Guide</a>
         </li>
         <li>
-          <a href="#">Nav 4</a>
+          <a href="#">About Us</a>
         </li>
       </ul>
 
