--- a/html/sales.html
+++ b/html/sales.html
@@ -29,7 +29,7 @@
           <a href="../styleguide.html">Style Guide</a>
         </li>
         <li>
-          <a href="#">Nav 4</a>
+          <a href="#">About Us</a>
         </li>
       </ul>
 
